# terminal_time_tracker

./: .gitignore  CMakeLists.txt  README.md
include/: Activity.h  DB.h  DisplayManager.h  Helper.h  Tracker.h  Types.h
src/: Activity.cpp  DB.cpp  DisplayManager.cpp  Helper.cpp  Tracker.cpp  main.cpp
